--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <!--CSS Reset-->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
+    <!--Font Link-->
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap" rel="stylesheet">
+
     <!--CSS Style Sheet-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -14,71 +17,80 @@
     <script src="assets/javascript/game.js"></script>
 
     <meta charset="UTF-8">
-    <title>Crystal Collector</title>
+    <title>Rupee Collector</title>
 
 </head>
 
 <body>
     <!-- CSS Grid Start -->
     <div class="gridContainer">
+        <div class="content">
+            <div class="inner">
 
-        <h1>Crystal Collector</h1>
+                <!-- Instructions -->
+                <div class="instructions">
+                    <h1>Rupee Collector</h1>
 
-        <!-- Instructions -->
-        <div class="instructions">
-            <p>You will be given a random number at the start of the game.</p>
+                    <p>You will be given a random number at the start of the game.</p>
 
-            <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your
-                total score.</p>
+                    <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points
+                        to
+                        your
+                        total score.</p>
 
-            <p>You win the game by matching your total score to random number, you lose the game if your total score
-                goes above the random number.</p>
+                    <p>You win the game by matching your total score to the random number, you lose the game if your
+                        total
+                        score
+                        goes above the random number.</p>
 
-            <p>The value of each crystal is hidden from you until you click on it.</p>
+                    <p>The value of each crystal is hidden from you until you click on it.</p>
 
-            <p>Each time when the game start, the game will change the values of each crystal.</p>
+                    <p>Each time when the game start, the game will change the values of each crystal.</p>
+                </div>
+
+                <!-- Random Number -->
+                <div class="randomNumber">
+                    Goal Value:
+                    <div id="randomNumber">
+                        ...
+                    </div>
+                </div>
+
+                <!-- Score Count -->
+                <div class="score">
+                    Your Value:
+                    <div id="score">
+                        0
+                    </div>
+                </div>
+                <!-- Crystals -->
+                <div class="crystalContainer">
+                    <div class="crystal" id="crystal1"></div>
+                    <div class="crystal" id="crystal2"></div>
+                    <div class="crystal" id="crystal3"></div>
+                    <div class="crystal" id="crystal4"></div>
+                </div>
+                <br>
+
+                <!-- Win Count -->
+                <div class="wins">Wins:
+                    <span id="wins">
+                        0
+                    </span>
+                </div>
+                <br>
+
+                <!-- Loss Count -->
+                <div class="losses">Losses:
+                    <span id="losses">
+                        0
+                    </span>
+                </div>
+
+
+            </div>
+
         </div>
-
-        <!-- Random Number -->
-        <div id="randomNumber">
-            ...
-        </div>
-        <br>
-
-        <!-- Win Count -->
-        <div class="wins">Wins:
-            <span id="wins">
-                0
-            </span>
-        </div>
-        <br>
-
-        <!-- Loss Count -->
-        <div class="losses">Losses:
-            <span id="losses">
-                0
-            </span>
-        </div>
-        <br>
-
-        <!-- Crystals -->
-        <div class="crystalContainer">
-            <div class="crystal" id="crystal1"></div>
-            <div class="crystal" id="crystal2"></div>
-            <div class="crystal" id="crystal3"></div>
-            <div class="crystal" id="crystal4"></div>
-        </div>
-        <br>
-
-        <!-- Score Count -->
-        <div class="totalScore">
-            Your total score is:
-        </div>
-
-        <div id="score">
-            0
-        </div>
-
         <!-- CSS Grid End -->
     </div>
 
